# CoreKit

./: CMakeLists.txt  README.md
application/: Application.cpp  Application.h  CMakeLists.txt
communication/: CMakeLists.txt  ITransport.cpp  ITransport.h  Packet.h  TransportState.h
components/: CMakeLists.txt  Timer.cpp  Timer.h  TimerMs.cpp  TimerMs.h  TimerTick.cpp  TimerTick.h
core/: CMakeLists.txt  Component.h  Registry.cpp  Registry.h  SchedulableComponent.cpp  SchedulableComponent.h
drivers/: Adc.cpp  Adc.h  CMakeLists.txt  Gpio.cpp  Gpio.h  GpioTypes.h  I2c.cpp  I2c.h  Pwm.cpp  Pwm.h  Spi.cpp  Spi.h
error/: CMakeLists.txt  Error.h  Result.h
hal/: CMakeLists.txt  HalAdc.cpp  HalAdc.h  HalGpio.cpp  HalGpio.h  HalPwm.cpp  HalPwm.h  HalSpecHandle.cpp  HalSpecHandle.h  HalSpi.cpp  HalSpi.h  IAdc.cpp  IAdc.h  IGpio.cpp  IGpio.h  II2c.cpp  II2c.h  IPwm.cpp  IPwm.h  ISpi.cpp  ISpi.h
io/: CMakeLists.txt  IPrinter.cpp  IPrinter.h  Printer.cpp  Printer.h  PrinterK.cpp  PrinterK.h
logging/: CMakeLists.txt  LogArgument.h  LogFormater.cpp  LogFormater.h  LogLevels.h  LogMacros.h  LogRecord.h  LogRingBuffer.cpp  LogRingBuffer.h  LogSerializer.cpp  LogSerializer.h  Logger.cpp  Logger.h  LoggerMacros.h  LoggerWorker.cpp  LoggerWorker.h
modules/: BatterySensor.h  CMakeLists.txt
platformadapters/: CMakeLists.txt
runtime/: CMakeLists.txt  Component.h  Scheduler.cpp  Scheduler.h  System.cpp  System.h
scheduler/: CMakeLists.txt  Scheduler.cpp  Scheduler.h
services/: AdcService.cpp  AdcService.h  BatteryMonitoringService.cpp  BatteryMonitoringService.h  (+5 more)
(+102 files in other folders)
